libs/sdk-flutter/ios/Classes/frb_generated.h

typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_opening_fee_params {
  uint64_t min_msat;
  uint32_t proportional;
  struct wire_cst_list_prim_u_8_strict *valid_until;
  uint32_t max_idle_time;
  uint32_t max_client_to_self_delay;
  struct wire_cst_list_prim_u_8_strict *promise;
} wire_cst_opening_fee_params;
typedef struct wire_cst_buy_bitcoin_request {
  int32_t provider;
  struct wire_cst_opening_fee_params *opening_fee_params;
} wire_cst_buy_bitcoin_request;
typedef struct wire_cst_check_message_request {
  struct wire_cst_list_prim_u_8_strict *message;
  struct wire_cst_list_prim_u_8_strict *pubkey;
  struct wire_cst_list_prim_u_8_strict *signature;
} wire_cst_check_message_request;
typedef struct wire_cst_configure_node_request {
  struct wire_cst_list_prim_u_8_strict *close_to_address;
} wire_cst_configure_node_request;
typedef struct wire_cst_greenlight_credentials {
  struct wire_cst_list_prim_u_8_strict *device_key;
  struct wire_cst_list_prim_u_8_strict *device_cert;
} wire_cst_greenlight_credentials;
typedef struct wire_cst_greenlight_node_config {
  struct wire_cst_greenlight_credentials *partner_credentials;
  struct wire_cst_list_prim_u_8_strict *invite_code;
} wire_cst_greenlight_node_config;
typedef struct wire_cst_NodeConfig_Greenlight {
  struct wire_cst_greenlight_node_config *config;
} wire_cst_NodeConfig_Greenlight;
typedef union NodeConfigKind {
  struct wire_cst_NodeConfig_Greenlight Greenlight;
} NodeConfigKind;
typedef struct wire_cst_node_config {
  int32_t tag;
  union NodeConfigKind kind;
} wire_cst_node_config;
typedef struct wire_cst_config {
  struct wire_cst_list_prim_u_8_strict *breezserver;
  struct wire_cst_list_prim_u_8_strict *chainnotifier_url;
  struct wire_cst_list_prim_u_8_strict *mempoolspace_url;
  struct wire_cst_list_prim_u_8_strict *working_dir;
  int32_t network;
  uint32_t payment_timeout_sec;
  struct wire_cst_list_prim_u_8_strict *default_lsp_id;
  struct wire_cst_list_prim_u_8_strict *api_key;
  double maxfee_percent;
  uint64_t exemptfee_msat;
  struct wire_cst_node_config node_config;
} wire_cst_config;
typedef struct wire_cst_connect_request {
  struct wire_cst_config config;
  struct wire_cst_list_prim_u_8_strict *seed;
  bool *restore_only;
} wire_cst_connect_request;
typedef struct wire_cst_reverse_swap_fees_request {
  uint64_t *send_amount_sat;
  uint32_t *claim_tx_feerate;
} wire_cst_reverse_swap_fees_request;
typedef struct wire_cst_list_payment_type_filter {
  int32_t *ptr;
  int32_t len;
} wire_cst_list_payment_type_filter;
typedef struct wire_cst_metadata_filter {
  struct wire_cst_list_prim_u_8_strict *json_path;
  struct wire_cst_list_prim_u_8_strict *json_value;
} wire_cst_metadata_filter;
typedef struct wire_cst_list_metadata_filter {
  struct wire_cst_metadata_filter *ptr;
  int32_t len;
} wire_cst_list_metadata_filter;
typedef struct wire_cst_list_payments_request {
  struct wire_cst_list_payment_type_filter *filters;
  struct wire_cst_list_metadata_filter *metadata_filters;
  int64_t *from_timestamp;
  int64_t *to_timestamp;
  bool *include_failures;
  uint32_t *offset;
  uint32_t *limit;
} wire_cst_list_payments_request;
typedef struct wire_cst_ln_url_auth_request_data {
  struct wire_cst_list_prim_u_8_strict *k1;
  struct wire_cst_list_prim_u_8_strict *action;
  struct wire_cst_list_prim_u_8_strict *domain;
  struct wire_cst_list_prim_u_8_strict *url;
} wire_cst_ln_url_auth_request_data;
typedef struct wire_cst_ln_url_pay_request_data {
  struct wire_cst_list_prim_u_8_strict *callback;
  uint64_t min_sendable;
  uint64_t max_sendable;
  struct wire_cst_list_prim_u_8_strict *metadata_str;
  uint16_t comment_allowed;
  struct wire_cst_list_prim_u_8_strict *domain;
  bool allows_nostr;
  struct wire_cst_list_prim_u_8_strict *nostr_pubkey;
  struct wire_cst_list_prim_u_8_strict *ln_address;
} wire_cst_ln_url_pay_request_data;
typedef struct wire_cst_ln_url_pay_request {
  struct wire_cst_ln_url_pay_request_data data;
  uint64_t amount_msat;
  struct wire_cst_list_prim_u_8_strict *comment;
  struct wire_cst_list_prim_u_8_strict *payment_label;
} wire_cst_ln_url_pay_request;
typedef struct wire_cst_ln_url_withdraw_request_data {
  struct wire_cst_list_prim_u_8_strict *callback;
  struct wire_cst_list_prim_u_8_strict *k1;
  struct wire_cst_list_prim_u_8_strict *default_description;
  uint64_t min_withdrawable;
  uint64_t max_withdrawable;
} wire_cst_ln_url_withdraw_request_data;
typedef struct wire_cst_ln_url_withdraw_request {
  struct wire_cst_ln_url_withdraw_request_data data;
  uint64_t amount_msat;
  struct wire_cst_list_prim_u_8_strict *description;
} wire_cst_ln_url_withdraw_request;
typedef struct wire_cst_open_channel_fee_request {
  uint64_t *amount_msat;
  uint32_t *expiry;
} wire_cst_open_channel_fee_request;
typedef struct wire_cst_prepare_onchain_payment_response {
  struct wire_cst_list_prim_u_8_strict *fees_hash;
  double fees_percentage;
  uint64_t fees_lockup;
  uint64_t fees_claim;
  uint64_t sender_amount_sat;
  uint64_t recipient_amount_sat;
  uint64_t total_fees;
} wire_cst_prepare_onchain_payment_response;
typedef struct wire_cst_pay_onchain_request {
  struct wire_cst_list_prim_u_8_strict *recipient_address;
  struct wire_cst_prepare_onchain_payment_response prepare_res;
} wire_cst_pay_onchain_request;
typedef struct wire_cst_prepare_onchain_payment_request {
  uint64_t amount_sat;
  int32_t amount_type;
  uint32_t claim_tx_feerate;
} wire_cst_prepare_onchain_payment_request;
typedef struct wire_cst_prepare_redeem_onchain_funds_request {
  struct wire_cst_list_prim_u_8_strict *to_address;
  uint32_t sat_per_vbyte;
} wire_cst_prepare_redeem_onchain_funds_request;
typedef struct wire_cst_prepare_refund_request {
  struct wire_cst_list_prim_u_8_strict *swap_address;
  struct wire_cst_list_prim_u_8_strict *to_address;
  uint32_t sat_per_vbyte;
} wire_cst_prepare_refund_request;
typedef struct wire_cst_receive_onchain_request {
  struct wire_cst_opening_fee_params *opening_fee_params;
} wire_cst_receive_onchain_request;
typedef struct wire_cst_receive_payment_request {
  uint64_t amount_msat;
  struct wire_cst_list_prim_u_8_strict *description;
  struct wire_cst_list_prim_u_8_strict *preimage;
  struct wire_cst_opening_fee_params *opening_fee_params;
  bool *use_description_hash;
  uint32_t *expiry;
  uint32_t *cltv;
} wire_cst_receive_payment_request;
typedef struct wire_cst_redeem_onchain_funds_request {
  struct wire_cst_list_prim_u_8_strict *to_address;
  uint32_t sat_per_vbyte;
} wire_cst_redeem_onchain_funds_request;
typedef struct wire_cst_refund_request {
  struct wire_cst_list_prim_u_8_strict *swap_address;
  struct wire_cst_list_prim_u_8_strict *to_address;
  uint32_t sat_per_vbyte;
} wire_cst_refund_request;
typedef struct wire_cst_report_payment_failure_details {
  struct wire_cst_list_prim_u_8_strict *payment_hash;
  struct wire_cst_list_prim_u_8_strict *comment;
} wire_cst_report_payment_failure_details;
typedef struct wire_cst_ReportIssueRequest_PaymentFailure {
  struct wire_cst_report_payment_failure_details *data;
} wire_cst_ReportIssueRequest_PaymentFailure;
typedef union ReportIssueRequestKind {
  struct wire_cst_ReportIssueRequest_PaymentFailure PaymentFailure;
} ReportIssueRequestKind;
typedef struct wire_cst_report_issue_request {
  int32_t tag;
  union ReportIssueRequestKind kind;
} wire_cst_report_issue_request;
typedef struct wire_cst_send_onchain_request {
  uint64_t amount_sat;
  struct wire_cst_list_prim_u_8_strict *onchain_recipient_address;
  struct wire_cst_list_prim_u_8_strict *pair_hash;
  uint32_t sat_per_vbyte;
} wire_cst_send_onchain_request;
typedef struct wire_cst_send_payment_request {
  struct wire_cst_list_prim_u_8_strict *bolt11;
  uint64_t *amount_msat;
  struct wire_cst_list_prim_u_8_strict *label;
} wire_cst_send_payment_request;
typedef struct wire_cst_tlv_entry {
  uint64_t field_number;
  struct wire_cst_list_prim_u_8_strict *value;
} wire_cst_tlv_entry;
typedef struct wire_cst_list_tlv_entry {
  struct wire_cst_tlv_entry *ptr;
  int32_t len;
} wire_cst_list_tlv_entry;
typedef struct wire_cst_send_spontaneous_payment_request {
  struct wire_cst_list_prim_u_8_strict *node_id;
  uint64_t amount_msat;
  struct wire_cst_list_tlv_entry *extra_tlvs;
  struct wire_cst_list_prim_u_8_strict *label;
} wire_cst_send_spontaneous_payment_request;
typedef struct wire_cst_sign_message_request {
  struct wire_cst_list_prim_u_8_strict *message;
} wire_cst_sign_message_request;
typedef struct wire_cst_static_backup_request {
  struct wire_cst_list_prim_u_8_strict *working_dir;
} wire_cst_static_backup_request;
typedef struct wire_cst_aes_success_action_data_decrypted {
  struct wire_cst_list_prim_u_8_strict *description;
  struct wire_cst_list_prim_u_8_strict *plaintext;
} wire_cst_aes_success_action_data_decrypted;
typedef struct wire_cst_AesSuccessActionDataResult_Decrypted {
  struct wire_cst_aes_success_action_data_decrypted *data;
} wire_cst_AesSuccessActionDataResult_Decrypted;
typedef struct wire_cst_AesSuccessActionDataResult_ErrorStatus {
  struct wire_cst_list_prim_u_8_strict *reason;
} wire_cst_AesSuccessActionDataResult_ErrorStatus;
typedef union AesSuccessActionDataResultKind {
  struct wire_cst_AesSuccessActionDataResult_Decrypted Decrypted;
  struct wire_cst_AesSuccessActionDataResult_ErrorStatus ErrorStatus;
} AesSuccessActionDataResultKind;
typedef struct wire_cst_aes_success_action_data_result {
  int32_t tag;
  union AesSuccessActionDataResultKind kind;
} wire_cst_aes_success_action_data_result;
typedef struct wire_cst_backup_failed_data {
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_backup_failed_data;
typedef struct wire_cst_bitcoin_address_data {
  struct wire_cst_list_prim_u_8_strict *address;
  int32_t network;
  uint64_t *amount_sat;
  struct wire_cst_list_prim_u_8_strict *label;
  struct wire_cst_list_prim_u_8_strict *message;
} wire_cst_bitcoin_address_data;