libs/sdk-flutter/lib/breez_sdk_core_bindings_generated.dart


typedef DartPostCObjectFnType = ffi.Pointer<ffi.NativeFunction<DartPostCObjectFnTypeFunction>>;
typedef DartPostCObjectFnTypeFunction = ffi.Bool Function(DartPort port_id, ffi.Pointer<ffi.Void> message);
typedef DartDartPostCObjectFnTypeFunction = bool Function(
    DartDartPort port_id, ffi.Pointer<ffi.Void> message);
typedef DartPort = ffi.Int64;
typedef DartDartPort = int;

final class _Dart_Handle extends ffi.Opaque {}

final class wire_cst_list_prim_u_8_strict extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_opening_fee_params extends ffi.Struct {
  @ffi.Uint64()
  external int min_msat;

  @ffi.Uint32()
  external int proportional;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> valid_until;

  @ffi.Uint32()
  external int max_idle_time;

  @ffi.Uint32()
  external int max_client_to_self_delay;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> promise;
}

final class wire_cst_buy_bitcoin_request extends ffi.Struct {
  @ffi.Int32()
  external int provider;

  external ffi.Pointer<wire_cst_opening_fee_params> opening_fee_params;
}

final class wire_cst_check_message_request extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> message;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> pubkey;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> signature;
}

final class wire_cst_configure_node_request extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> close_to_address;
}

final class wire_cst_greenlight_credentials extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> device_key;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> device_cert;
}

final class wire_cst_greenlight_node_config extends ffi.Struct {
  external ffi.Pointer<wire_cst_greenlight_credentials> partner_credentials;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> invite_code;
}

final class wire_cst_NodeConfig_Greenlight extends ffi.Struct {
  external ffi.Pointer<wire_cst_greenlight_node_config> config;
}

final class NodeConfigKind extends ffi.Union {
  external wire_cst_NodeConfig_Greenlight Greenlight;
}

final class wire_cst_node_config extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external NodeConfigKind kind;
}

final class wire_cst_config extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> breezserver;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> chainnotifier_url;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> mempoolspace_url;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> working_dir;

  @ffi.Int32()
  external int network;

  @ffi.Uint32()
  external int payment_timeout_sec;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> default_lsp_id;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> api_key;

  @ffi.Double()
  external double maxfee_percent;

  @ffi.Uint64()
  external int exemptfee_msat;

  external wire_cst_node_config node_config;
}

final class wire_cst_connect_request extends ffi.Struct {
  external wire_cst_config config;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> seed;

  external ffi.Pointer<ffi.Bool> restore_only;
}

final class wire_cst_reverse_swap_fees_request extends ffi.Struct {
  external ffi.Pointer<ffi.Uint64> send_amount_sat;

  external ffi.Pointer<ffi.Uint32> claim_tx_feerate;
}

final class wire_cst_list_payment_type_filter extends ffi.Struct {
  external ffi.Pointer<ffi.Int32> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_metadata_filter extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> json_path;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> json_value;
}

final class wire_cst_list_metadata_filter extends ffi.Struct {
  external ffi.Pointer<wire_cst_metadata_filter> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_payments_request extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_payment_type_filter> filters;

  external ffi.Pointer<wire_cst_list_metadata_filter> metadata_filters;

  external ffi.Pointer<ffi.Int64> from_timestamp;

  external ffi.Pointer<ffi.Int64> to_timestamp;

  external ffi.Pointer<ffi.Bool> include_failures;

  external ffi.Pointer<ffi.Uint32> offset;

  external ffi.Pointer<ffi.Uint32> limit;
}

final class wire_cst_ln_url_auth_request_data extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> k1;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> action;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> domain;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> url;
}

final class wire_cst_ln_url_pay_request_data extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> callback;

  @ffi.Uint64()
  external int min_sendable;

  @ffi.Uint64()
  external int max_sendable;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> metadata_str;

  @ffi.Uint16()
  external int comment_allowed;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> domain;

  @ffi.Bool()
  external bool allows_nostr;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> nostr_pubkey;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> ln_address;
}

final class wire_cst_ln_url_pay_request extends ffi.Struct {
  external wire_cst_ln_url_pay_request_data data;

  @ffi.Uint64()
  external int amount_msat;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> comment;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> payment_label;
}

final class wire_cst_ln_url_withdraw_request_data extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> callback;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> k1;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> default_description;

  @ffi.Uint64()
  external int min_withdrawable;

  @ffi.Uint64()
  external int max_withdrawable;
}

final class wire_cst_ln_url_withdraw_request extends ffi.Struct {
  external wire_cst_ln_url_withdraw_request_data data;

  @ffi.Uint64()
  external int amount_msat;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> description;
}

final class wire_cst_open_channel_fee_request extends ffi.Struct {
  external ffi.Pointer<ffi.Uint64> amount_msat;

  external ffi.Pointer<ffi.Uint32> expiry;
}

final class wire_cst_prepare_onchain_payment_response extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> fees_hash;

  @ffi.Double()
  external double fees_percentage;

  @ffi.Uint64()
  external int fees_lockup;

  @ffi.Uint64()
  external int fees_claim;

  @ffi.Uint64()
  external int sender_amount_sat;

  @ffi.Uint64()
  external int recipient_amount_sat;

  @ffi.Uint64()
  external int total_fees;
}

final class wire_cst_pay_onchain_request extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> recipient_address;

  external wire_cst_prepare_onchain_payment_response prepare_res;
}

final class wire_cst_prepare_onchain_payment_request extends ffi.Struct {
  @ffi.Uint64()
  external int amount_sat;

  @ffi.Int32()
  external int amount_type;

  @ffi.Uint32()
  external int claim_tx_feerate;
}

final class wire_cst_prepare_redeem_onchain_funds_request extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> to_address;

  @ffi.Uint32()
  external int sat_per_vbyte;
}

final class wire_cst_prepare_refund_request extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> swap_address;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> to_address;

  @ffi.Uint32()
  external int sat_per_vbyte;
}

final class wire_cst_receive_onchain_request extends ffi.Struct {
  external ffi.Pointer<wire_cst_opening_fee_params> opening_fee_params;
}

final class wire_cst_receive_payment_request extends ffi.Struct {
  @ffi.Uint64()
  external int amount_msat;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> description;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> preimage;

  external ffi.Pointer<wire_cst_opening_fee_params> opening_fee_params;

  external ffi.Pointer<ffi.Bool> use_description_hash;

  external ffi.Pointer<ffi.Uint32> expiry;

  external ffi.Pointer<ffi.Uint32> cltv;
}

final class wire_cst_redeem_onchain_funds_request extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> to_address;

  @ffi.Uint32()
  external int sat_per_vbyte;
}

final class wire_cst_refund_request extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> swap_address;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> to_address;

  @ffi.Uint32()
  external int sat_per_vbyte;
}

final class wire_cst_report_payment_failure_details extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> payment_hash;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> comment;
}

final class wire_cst_ReportIssueRequest_PaymentFailure extends ffi.Struct {
  external ffi.Pointer<wire_cst_report_payment_failure_details> data;
}

final class ReportIssueRequestKind extends ffi.Union {
  external wire_cst_ReportIssueRequest_PaymentFailure PaymentFailure;
}

final class wire_cst_report_issue_request extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external ReportIssueRequestKind kind;
}

final class wire_cst_send_onchain_request extends ffi.Struct {
  @ffi.Uint64()
  external int amount_sat;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> onchain_recipient_address;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> pair_hash;

  @ffi.Uint32()
  external int sat_per_vbyte;
}

final class wire_cst_send_payment_request extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> bolt11;

  external ffi.Pointer<ffi.Uint64> amount_msat;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> label;
}

final class wire_cst_tlv_entry extends ffi.Struct {
  @ffi.Uint64()
  external int field_number;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> value;
}

final class wire_cst_list_tlv_entry extends ffi.Struct {
  external ffi.Pointer<wire_cst_tlv_entry> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_send_spontaneous_payment_request extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> node_id;

  @ffi.Uint64()
  external int amount_msat;

  external ffi.Pointer<wire_cst_list_tlv_entry> extra_tlvs;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> label;
}

final class wire_cst_sign_message_request extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> message;
}

final class wire_cst_static_backup_request extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> working_dir;
}

final class wire_cst_aes_success_action_data_decrypted extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> description;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> plaintext;
}

final class wire_cst_AesSuccessActionDataResult_Decrypted extends ffi.Struct {
  external ffi.Pointer<wire_cst_aes_success_action_data_decrypted> data;
}

final class wire_cst_AesSuccessActionDataResult_ErrorStatus extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> reason;
}

final class AesSuccessActionDataResultKind extends ffi.Union {
  external wire_cst_AesSuccessActionDataResult_Decrypted Decrypted;

  external wire_cst_AesSuccessActionDataResult_ErrorStatus ErrorStatus;
}

final class wire_cst_aes_success_action_data_result extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external AesSuccessActionDataResultKind kind;
}

final class wire_cst_backup_failed_data extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;
}

final class wire_cst_bitcoin_address_data extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> address;

  @ffi.Int32()
  external int network;

  external ffi.Pointer<ffi.Uint64> amount_sat;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> label;
